
3. CHANGE LOG & FEATURES ADDED
------------------------------

v2.32

* General:
  - Minimum NASM version required for x86 architecture is 2.14.01 now.
  - 32-bit x86 support has been removed.

* RISCV support.
  - Initial riscv64 support with runtime and build-time CPU feature detection.

* Igzip compression improvements:
  - Added new RVV adler32 implementations.

* Igzip:
  - Added experimental ISA-L shim library to provide drop-in compatibility with zlib.

* RAID improvements:
  - Added new x86 AVX2+GFNI and AVX512+GFNI pq_gen implementations.
  - Added new RVV xor_gen, pq_gen implementations.

* Erasure coding improvements:
  - Added new RVV ec_encode_data,ec_encode_data_update,gf_vect_mad, gf_vect_dot_prod, gf_vect_mul implementations.

* Zero-memory detection improvements:
  - Added new RVV implementations.

* CRC improvements:
  - CRC64 Rocksoft implementation on aarch64 optimized similar to other CRC64
    implementations.

* Performance applications:
  - Add consolidated CRC performance application.
  - Add consolidated RAID performance application.

v2.31

* API changes:
  - gf_vect_mul_base() function now returns an integer, matching the return type
    of gf_vect_mul() function (not a breaking change).

* Igzip compression improvements:
  - Added compress/decompress with dictionary to perf test app.
  - Zlib header can be now created on the fly when starting the compression.
  - Added isal_zlib_hdr_init() function to initialize the zlib header to 0.

* Zero-memory detection improvements:
  - Optimized AVX implementation.
  - Added new AVX2 and AVX512 implementations.

* Erasure coding improvements:
  - Added new AVX512 and AVX2 implementations using GFNI instructions.
  - Added new SVE implementation.

* CRC improvements:
  - Added new CRC64 Rocksoft algorithm.
  - CRC x86 implementations optimized using ternary logic instructions and
    folding of bigger data on the last bytes.
  - CRC16 T10dif aarch64 implementation improved.